Completed full Backend

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB = mongodb+srv://gdgouravdey:8y1TjZfXaEmQwgp1@movie.cshrr9e.mongodb.net/?retryWrites=true&w=majority
+DB_CONNECT = "mongodb+srv://gdgouravdey:8y1TjZfXaEmQwgp1@movie.cshrr9e.mongodb.net/?retryWrites=true&w=majority"
