--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_CONNECT = "mongodb+srv://gdgouravdey:8y1TjZfXaEmQwgp1@movie.cshrr9e.mongodb.net/?retryWrites=true&w=majority"
+DB_CONNECT = "YOUR_CONNECTION_STRING_FOR_MONGODB" // Change this to your connection string
