Updated .env file

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-DB_CONNECT = "YOUR_CONNECTION_STRING_FOR_MONGODB" // Change this to your connection string
+DB_CONNECT = "YOUR_CONNECTION_STRING_FOR_MONGODB"
